<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">


    <com.devabhijeet.livestockbazaar.utils.LBTextView
        android:id="@+id/tv_title_register_acivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/title_create_account"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_H1"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name_register_acivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_full_name"
        android:textColorHint="@color/LightGrey"
        app:startIconDrawable="@drawable/ic_vector_account"
        app:startIconTint="@color/LightGrey"
        >

        <com.devabhijeet.livestockbazaar.utils.LBEditText
            android:id="@+id/et_fullname_register_acivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/MediumGrey"
            android:textSize="@dimen/text_size_Body"

            />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_register_acivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/LightGrey"
        app:startIconDrawable="@drawable/ic_vector_email"
        app:startIconTint="@color/LightGrey"
        >

        <com.devabhijeet.livestockbazaar.utils.LBEditText
            android:id="@+id/et_email_register_acivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/MediumGrey"
            android:textSize="@dimen/text_size_Body"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_register_acivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/LightGrey"
        app:startIconDrawable="@drawable/ic_vector_padlock"
        app:startIconTint="@color/LightGrey"
        >

        <com.devabhijeet.livestockbazaar.utils.LBEditText
            android:id="@+id/et_password_register_acivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/MediumGrey"
            android:textSize="@dimen/text_size_Body"

            />

    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account_register_acivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:fontFamily="@font/mandali"
        app:rippleColor="@color/primary"
        android:gravity="left|center_vertical"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_Button"
        android:textStyle="bold"
        app:icon="@drawable/ic_vector_arrow_forward"
        app:iconTint="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <com.devabhijeet.livestockbazaar.utils.LBTextView
            android:id="@+id/tv_already_have_an_account_register_acivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_size_Link" />

        <com.devabhijeet.livestockbazaar.utils.LBTextViewBold
            android:id="@+id/tv_sign_in_register_acivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/title_login"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_size_Link" />
    </LinearLayout>



</LinearLayout>